# mcdiag

./: .gitignore  CITATION.cff  LICENSE  README.md  figcheck.py  figstyle.py  make_extended_data.py  make_fig1.py  make_fig2.py  make_fig3.py  make_fig4.py  make_fig5.py  make_fig6.py  make_figS2.py  make_figures.py  make_supplementary.py  requirements.txt
data/: .gitkeep
demo/: demo_recovery.py  window_pool.npy
docs/: analysis_manifest.csv  audit_corrections.md  number_trace.csv  ramp_validation.md  repo_inventory.md  robustness.md  steinmetz_replication_feasibility.md  supplementary_information.md  technical_audit.md
extended_data/: ed_table1_recovery_grid.csv  ed_table1_recovery_grid.md
mcdiag/: LICENSE  README.md  pyproject.toml
mcdiag/examples/: ibl_mrn_report.out  ibl_mrn_report.py  synthetic_demo.py
mcdiag/src/mcdiag/: __init__.py  calibrate.py  cli.py  controls.py  diagnose.py  injection.py  recoverability.py  report.py
mcdiag/tests/: conftest.py  test_ibl_fixture.py  test_recoverability.py  test_synthetic.py
mcdiag/tests/fixtures/: ibl_mrn.npz
results/: number_trace.csv  phase1_recovery_nb_grid.csv  phase1_recovery_nb_grid_R40.csv  phase1_recovery_poisson_misspec_R40.csv  phase1_recovery_stepiness.csv  phase1_recovery_sweep.csv  phase1_recovery_validation.json  phase1_summary.csv  phase1b_accuracy_by_rt.csv  phase2_choicestim_cells.csv  phase2_choicestim_cells_full.csv  phase2_choicestim_region.csv  phase2_choicestim_region_full.csv  phase2_coverage.csv  phase2_mrn_recovery_headline.csv  phase2_mrn_recovery_preflight.csv  phase2_region_census.csv  (+19 more)
(+79 files in other folders)
